web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: bgpark82/company-visa-web:latest
          command: ["bundle", "exec", "rails", "server", "-b", "0.0.0.0"]
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001
