zincsearch-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zincsearch
  labels:
    app: zincsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zincsearch
  template:
    metadata:
      labels:
        app: zincsearch
    spec:
      containers:
        - name: zincsearch
          image: public.ecr.aws/zinclabs/zincsearch:latest
          ports:
            - containerPort: 4080
          volumeMounts:
            - mountPath: /data
              name: zincsearch-data
      volumes:
        - name: zincsearch-data
          persistentVolumeClaim:
            claimName: zincsearch-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: zincsearch
spec:
  type: LoadBalancer
  selector:
    app: zincsearch
  ports:
    - protocol: TCP
      port: 4080
      targetPort: 4080
